--- a/.project
+++ b/.project
@@ -5,7 +5,13 @@
 	<projects>
 	</projects>
 	<buildSpec>
+		<buildCommand>
+			<name>com.rsi.idldt.core.IDLBuilder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
 	</buildSpec>
 	<natures>
+		<nature>com.rsi.idldt.core.IDLNature</nature>
 	</natures>
 </projectDescription>
